--- a/VantecWeb/VantecWeb.csproj
+++ b/VantecWeb/VantecWeb.csproj
@@ -64,6 +64,7 @@
     <Content Include="HTML\framework.js" />
     <Content Include="HTML\group_person_number_input.css" />
     <Content Include="HTML\group_person_number_input.js" />
+    <Content Include="HTML\WebAudioAPISound.js" />
     <Content Include="HTML\WebViewController.js" />
     <Content Include="VantecSwift\.DS_Store" />
     <Content Include="VantecSwift\Base.lproj\Main.storyboard" />
